# cargo-file-gen

./: Cargo.toml  README.md
src/: error.rs  file_size.rs  lib.rs  main.rs
