[package]
name = "cargo-file-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
clap-verbosity-flag = "2.1.0"
lipsum = "0.9.0"
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75"
